# self.py

./: README.md  setup.cfg  setup.py
tests/self/examples/@self/: assert instance.method()==instance
