# https://pypi.org/project/setupcfg-generator/
[metadata]
name = self
version = 2019.3.22
url = https://github.com/looking-for-a-job/self.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = self decorator

[options]
install_requires = 
	decorator
	public
	setuptools
packages = 
	self
